[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vulscan"
version = "0.1.0"
description = "Multi-target security and compliance scanner with AI-powered preventive mode"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["security", "scanner", "cli", "sast", "vulnerability", "compliance", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.31",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "google-genai>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "semgrep>=1.0",
]

[project.scripts]
vulscan = "vulscan.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/vulscan"
Repository = "https://github.com/your-username/vulscan"
Issues = "https://github.com/your-username/vulscan/issues"
